export const snapshot = {};

snapshot[`duolingo feed 1`] = `
[
  {
    data: [
      "💪 Mary collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Ana Lucia Santos collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Sue collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Victor Hugo completed 30 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Victor Hugo collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 azra completed a 7 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Anna collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Fiona completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Sonnenschein collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 abc completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Namık Öztürk completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 its_aymanYT completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 GULCAN collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Pilibep completed 25 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Pilibep did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Laura completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Kim collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Robby A collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Kat completed 5 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Jasper did more than 10 lessons in a day!",
    ],
    level: "log",
  },
  {
    data: [
      "🙏 Tuğrul you and kathrynelsarraff completed the friends quest!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Ilona collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Ciflorette collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Therese Saade Karam collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 frankrae collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 I want 500 subscribers collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Gerda collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "👍 RightPlaceWrongPersonByRM shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "👍 RightPlaceWrongPersonByRM shared a sentence",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Thomé collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Арина collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 zeynep h ates collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Akipapi collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Akipapi completed 20 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 I want 500 subscribers completed 3 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💯 drumwhacker completed a 1500 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Юлия collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Atayvia Roberts collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Susi collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Esther collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Melanie collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 helma auler collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Sima collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Ingrid collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 RJracoon collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Sheri Poisson ONeill did more than 10 lessons in a day!",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo feed --engage 1`] = `
[
  {
    data: [
      "💪 Mary collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Ana Lucia Santos collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Sue collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 Victor Hugo completed 30 friends quests in a row!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Victor Hugo collected the march badge!",
    ],
    level: "log",
  },
  {
    data: [
      "🎉 azra completed a 7 day streak!",
    ],
    level: "log",
  },
  {
    data: [
      "💪 Anna collected the march badge!",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows 1`] = `
[
  {
    data: [
      "👤 Following 384 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 397 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows --follow 1`] = `
[
  {
    data: [
      "👤 Following 384 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 397 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo follows --unfollow 1`] = `
[
  {
    data: [
      "❌ Unfollowed AgaKrzew.",
    ],
    level: "log",
  },
  {
    data: [
      "❌ Unfollowed Crodragon2585.",
    ],
    level: "log",
  },
  {
    data: [
      "❌ Unfollowed Mattias697103.",
    ],
    level: "log",
  },
  {
    data: [
      "❌ Unfollowed Pt9Yex.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Following 380 people.",
    ],
    level: "log",
  },
  {
    data: [
      "👤 Followed by 397 people.",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo league 1`] = `
[
  {
    data: [
      "🩷  Pearl League                   
 1. Tuğrul 👀               1799 XP
 2. Crodragon 🍿            1713 XP
 3. Pöt                     1644 XP
 4. Aga Krzew               1201 XP
 5. Mattias                 1103 XP
 6. wotan 😡                 841 XP
 7. Simone 🇮🇹                797 XP
 8. Valko Gada 💩            747 XP
 9. Ira                      574 XP
10. Lucka                    559 XP
11. Büsra Dölek          👤  548 XP
12. Marcelo Costa Filho  👤  528 XP
13. Steen                    523 XP
14. G                        522 XP
15. Luke 😡                  434 XP
16. Steph                    352 XP
17. Luna                     323 XP
18. Jirka                    288 XP
19. Minttu                   251 XP
20. Andrea 😡                213 XP",
    ],
    level: "log",
  },
]
`;

snapshot[`duolingo league --follow 1`] = `
[
  {
    data: [
      "🩷  Pearl League                   
 1. Tuğrul 👀               1799 XP
 2. Crodragon 🍿            1713 XP
 3. Pöt                     1644 XP
 4. Aga Krzew               1201 XP
 5. Mattias                 1103 XP
 6. wotan 😡                 841 XP
 7. Simone 🇮🇹                797 XP
 8. Valko Gada 💩            747 XP
 9. Ira                      574 XP
10. Lucka                    559 XP
11. Büsra Dölek          👤  548 XP
12. Marcelo Costa Filho  👤  528 XP
13. Steen                    523 XP
14. G                        522 XP
15. Luke 😡                  434 XP
16. Steph                    352 XP
17. Luna                     323 XP
18. Jirka                    288 XP
19. Minttu                   251 XP
20. Andrea 😡                213 XP",
    ],
    level: "log",
  },
]
`;
